[signin] Handle Dice token exchange failures

When the Dice token exchange fails:
- if this is a Sync signin, the tab is navigated to the NTP, to match
  the behavior of the success case
- if this is a Sync signin or if Dice is fully enabled for this profile,
  display the signin error dialog.

Bug: 789130
Change-Id: I4a5309a18301c4e3112db50296edd625682f0fd3