chrome/browser/signin/process_dice_header_delegate_impl.h
@@ -21,6 +21,7 @@ class ProcessDiceHeaderDelegateImpl : public ProcessDiceHeaderDelegate,
 
   // ProcessDiceHeaderDelegate:
   void EnableSync(const std::string& account_id) override;
+  void HandleTokenExchangeFailure(const GoogleServiceAuthError& error) override;
 
  private:
   // Returns true if sync should be enabled after the user signs in.
